3.0.18.0 (open)
 * CommitLogReplayer.handleReplayError should print stack traces (CASSANDRA-14589)
 * Netty epoll IOExceptions caused by unclean client disconnects being logged at INFO (CASSANDRA-14909)
 * Unfiltered.isEmpty conflicts with Row extends AbstractCollection.isEmpty (CASSANDRA-14588)
 * Move TWCS message 'No compaction necessary for bucket size' to Trace level (CASSANDRA-14884)
 * Improve TokenMetaData cache populating performance avoid long locking (CASSANDRA-14660)
 * sstableloader should use discovered broadcast address to connect intra-cluster (CASSANDRA-14522)
 * Fix reading columns with non-UTF names from schema (CASSANDRA-14468)
 * Fix potential IndexOutOfBoundsException with counters (CASSANDRA-14167)
 * Restore resumable hints delivery, backport CASSANDRA-11960 (CASSANDRA-14419)
 * Create MessagingService mocking classes (CASSANDRA-12016)
Merged from 2.2:
 * Fix incorrect cqlsh results when selecting same columns multiple times (CASSANDRA-13262)
 * Returns null instead of NaN or Infinity in JSON strings (CASSANDRA-14377)
 * Don't skip entire sstables when reading backwards with mixed clustering column order (CASSANDRA-14910)
 * Cannot perform slice reads in reverse direction against tables with clustering columns in mixed order (CASSANDRA-14899)

3.0.17.15
* <rdar://problem/49484414> (CASSANDRA-15072) Incomplete range results during 2.X -> 3.11.4 upgrade
* <rdar://problem/49120367> (CASSANDRA-15059) Gossiper#markAlive can race with Gossiper#markDead
* (no radar) PR #1249 drop root capabilities before running tests and reenable FQL tests
* <rdar://problem/48670257> (CASSANDRA-15045) Fix index summary redistribution compaction cancellation issues
* <rdar://problem/49900065> (CASSANDRA-15089) CassandraNetworkAuthorizer::authorize should get role details from Roles, not directly from IRoleManager
* <rdar://problem/49938329> (CASSANDRA-15086) Illegal column names make legacy sstables unreadable in 3.0/3.x