@@ -1,4 +1,5 @@
 3.0.18.0 (open)
+ * Backport: Flush netty client messages immediately (not by default) (CASSANDRA-13651)
  * CommitLogReplayer.handleReplayError should print stack traces (CASSANDRA-14589)
  * Netty epoll IOExceptions caused by unclean client disconnects being logged at INFO (CASSANDRA-14909)
  * Unfiltered.isEmpty conflicts with Row extends AbstractCollection.isEmpty (CASSANDRA-14588)
